--- a/investigacion.tex
+++ b/investigacion.tex
@@ -207,7 +207,7 @@ $X \equiv \begin{bmatrix}
 Si escribimos el estado cuántico $\alpha \vert 0\rangle + \beta \vert 1\rangle$ en notación vectorial
 $
 \begin{bmatrix}
- \ \alpha
+ \ \alpha \\
  \ \beta
  \end{bmatrix}
 $
