--- a/investigacion.tex
+++ b/investigacion.tex
@@ -285,7 +285,7 @@ Explicar el proceso por el cual se logra transferir el estado de una partícula 
 \part{D-Wave Systems}
 \section*{Historia y objetivos de D-Wave Systems}
 
-D-Wave Systems es la primera companía privada comercial que ofrece computación cuántica. Se basa en los principios de que la computación cuántica tiene el potencial de resolver algunos de los problemas más complejos alrededor del mundo. Esperan que la computación cuántica pueda llevar a nuevos descubrimientos en ciencia, ingeniería, modelos en computación, simulación, análisis financiero, optimización, lógica...
+D-Wave Systems es la primera compañía privada comercial que ofrece computación cuántica. Se basa en los principios de que la computación cuántica tiene el potencial de resolver algunos de los problemas más complejos alrededor del mundo. Esperan que la computación cuántica pueda llevar a nuevos descubrimientos en ciencia, ingeniería, modelos en computación, simulación, análisis financiero, optimización, lógica...
 
 Fue fundada en 1999 por Geordie Rose, Haig Farris y Alexandre Zagoskin, que se encontraron en la Universidad de British Columbia (UBC). El nombre D-Wave viene de los primeros diseños de qubits que plantearon, que usaban superconductores de tipo d-wave. Empezó como una rama de UBC con lazos muy fuertes con el Departamento de Física y Astronomía, ya que ellos proporcionaban los fondos para investigación en la computación cuántica. El objetivo de D-Wave es integrar nuevos descubrimietos en física y computación para producir nuevos avances en la computación cuántica.
 
@@ -301,7 +301,7 @@ Hoy en día es reconocida como una de las compañías pioneras en computadoras c
 
 La computadora D-Wave utiliza los principios de la mecánica cuántica para resolver problemas computacionales. Gracias a los algoritmos cuánticos es posible resolver tareas complejas en un tiempo mucho menor que con una computadora clásica. La computadora D-Wave no hace todas las operaciones que hace una normal, sino que está construida especialmente para resolver problemas de optimización. (D-Wave Systems, 2014)
 
-Entonces, cúal es la diferencia entre una computadora cuántica y una computadora clásica. D-Wave Systems expone una analogía entre estas estructuras. Imaginemonos un mapa con valles y montañas. Resolver un problema de optimización sería como encontrar el punto más bajo en este mapa. Una computadora clásica utilizaría un algoritmo que recorrería todos los puntos posibles del mapa y los analiza hasta luego conseguir el mejor resultado. El procesamiento de la D-Wave es capaz de considerar todas las posibilidades al mismo tiempo y le devuelve al usuario un conjunto que incluye no solo al mejor resultado sino a otros resultados también. (D-Wave Systems, 2014)
+Entonces, ¿cúal es la diferencia entre una computadora cuántica y una computadora clásica? D-Wave Systems expone una analogía entre estas estructuras. Imaginemonos un mapa con valles y montañas. Resolver un problema de optimización sería como encontrar el punto más bajo en este mapa. Una computadora clásica utilizaría un algoritmo que recorrería todos los puntos posibles del mapa y los analiza hasta luego conseguir el mejor resultado. El procesamiento de la D-Wave es capaz de considerar todas las posibilidades al mismo tiempo y le devuelve al usuario un conjunto que incluye no solo al mejor resultado sino a otros resultados también. (D-Wave Systems, 2014)
 
 Siguiendo este ejemplo, si un usuario quisiera resolver este problema, primero expresa su problema en un lenguaje adecuado a D-Wave y se conectaría a la computadora mediante una red, como si fuera un dispositivo periférico. Luego de enviar el problema, la máquina se encarga de hacer operaciónes cuánticas para luego darle al usuario la respuesta al problema.  (D-Wave Systems, 2014)
 
