--- a/investigacion.tex
+++ b/investigacion.tex
@@ -365,7 +365,7 @@ En el campo de la ciencia tenemos el ejemplo de analizar el plegamiento de las p
 
 Con respecto a la robótica se podría usar la computación cuántica para aprender compotamiento y procesar imágenes y video. Uno de los limitantes de los programadores actualmente es la dificultad de desarrollar algoritmos que hagan que una máquina aprenda comportamientos. Como el procesamiento de grandes árboles de datos es un problema para las computadoras clásicas, la capacidad de optimización de la computación cuántica puede ser útil en este caso. (D-Wave Systems, 2014)
 
-Y cuáles industrias podrían estar interesadas en la computación cuántica. Podríamos mencionar universidades, laboratorios, compañias financieras, compañías energéticas, defensa y militares y hasta la misma web. (D-Wave Systems, 2014)
+¿Cuáles industrias podrían estar interesadas en la computación cuántica? Podríamos mencionar universidades, laboratorios, compañias financieras, compañías energéticas, defensa y militares y hasta la misma web. (D-Wave Systems, 2014)
 
 Actualmente, D-Wave tiene clientes importantes, uno de ellos es la NASA y Google. Estos, en colaboración con la Asociación de Universidades de Investigación Espacial crearon en el 2013 el Laboratorio Cuántico de Inteligencia Artificial (QuAIL siglas en inglés). Google se centra en mejorar modelos de optimización con la computación cuántica. La NASA intenta demostrar que tanto esta como los algoritmos cuánticos pueden cambiar tareas de optimización como reconocimiento de patrones, tráfico aéreo, navegación, robótica, comunicaciones entre otros. (D-Wave Systems, 2014)
 
